--- a/cbse-prepmaster/client/package.json
+++ b/cbse-prepmaster/client/package.json
@@ -19,43 +19,22 @@
     "@capacitor/status-bar": "^7.0.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@ionic/react": "^7.0.0",
+    "@ionic/react-router": "^7.0.0",
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
     "@reduxjs/toolkit": "^1.9.7",
-    "@testing-library/jest-dom": "^6.1.4",
-    "@testing-library/react": "^14.1.0",
-    "@testing-library/user-event": "^14.5.1",
     "axios": "^1.6.2",
     "chart.js": "^4.4.0",
     "date-fns": "^2.30.0",
     "formik": "^2.4.5",
     "i18next": "^23.7.6",
-    "i18next-browser-languagedetector": "^7.2.0",
-    "i18next-http-backend": "^2.4.2",
-    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
-    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^13.5.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.19.0",
     "react-scripts": "5.0.1",
-    "react-swipeable-views": "^0.14.0",
-    "sharp": "^0.32.6",
-    "socket.io-client": "^4.7.2",
     "web-vitals": "^3.5.0",
-    "workbox-background-sync": "^7.0.0",
-    "workbox-broadcast-update": "^7.0.0",
-    "workbox-cacheable-response": "^7.0.0",
-    "workbox-core": "^7.0.0",
-    "workbox-expiration": "^7.0.0",
-    "workbox-google-analytics": "^7.0.0",
-    "workbox-navigation-preload": "^7.0.0",
-    "workbox-precaching": "^7.0.0",
-    "workbox-range-requests": "^7.0.0",
-    "workbox-routing": "^7.0.0",
-    "workbox-strategies": "^7.0.0",
-    "workbox-streams": "^7.0.0",
     "yup": "^1.3.2"
   },
   "scripts": {
@@ -63,38 +42,13 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "setup": "node scripts/setup-project.js",
-    "android": "npm run build && npx cap sync && npx cap open android",
-    "build:android": "node scripts/build-android.js",
-    "build:android-release": "cross-env NODE_ENV=production node scripts/build-android.js",
-    "resources": "node scripts/generate-assets.js",
-    "setup:dev": "node scripts/setup-dev.js",
-    "test:app": "node scripts/test-app.js",
-    "test:pwa": "node scripts/test-pwa.js",
-    "deploy:dev": "node scripts/deploy.js development",
-    "deploy:staging": "node scripts/deploy.js staging",
-    "deploy:prod": "node scripts/deploy.js production",
-    "prepare-android": "npm run resources && npm run build:android",
-    "prepare-release": "npm run resources && npm run build:android-release",
-    "clean": "rimraf build/ android/app/build/ android/app/release/",
-    "lint": "eslint src/",
-    "lint:fix": "eslint src/ --fix",
-    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
-    "analyze": "node scripts/analyze.js",
-    "analyze:bundle": "source-map-explorer 'build/static/js/*.js'",
-    "analyze:deps": "npx depcheck",
-    "version:major": "node scripts/version.js major",
-    "version:minor": "node scripts/version.js minor",
-    "version:patch": "node scripts/version.js patch",
-    "version:beta": "node scripts/version.js beta",
-    "version:alpha": "node scripts/version.js alpha",
-    "translations:init": "node scripts/manage-translations.js init",
-    "translations:extract": "node scripts/manage-translations.js extract",
-    "translations:validate": "node scripts/manage-translations.js validate",
-    "translations:sync": "node scripts/manage-translations.js sync",
-    "translations:add": "node scripts/manage-translations.js add-language",
-    "assets:optimize": "node scripts/optimize-assets.js",
-    "postinstall": "npm run setup"
+    "ionic:build": "npm run build",
+    "ionic:serve": "npm run start",
+    "resources": "capacitor-resources -p android",
+    "android": "ionic capacitor run android",
+    "android:build": "ionic capacitor build android",
+    "android:live": "ionic capacitor run android -l --external",
+    "sync": "ionic capacitor sync"
   },
   "eslintConfig": {
     "extends": [
@@ -117,34 +71,11 @@
   "devDependencies": {
     "@capacitor/assets": "^3.0.1",
     "@capacitor/resources": "^3.0.1",
+    "@ionic/cli": "^7.1.1",
+    "cordova-res": "^0.15.4",
     "cross-env": "^7.0.3",
-    "depcheck": "^1.4.7",
     "eslint": "^8.53.0",
-    "eslint-config-react-app": "^7.0.1",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "husky": "^8.0.3",
-    "lighthouse": "^11.3.0",
-    "lint-staged": "^15.1.0",
-    "prettier": "^3.1.0",
-    "puppeteer": "^21.5.2",
-    "rimraf": "^5.0.5",
-    "serve": "^14.2.1",
-    "source-map-explorer": "^2.5.3",
-    "svgo": "^3.0.4",
-    "webpack-bundle-analyzer": "^4.9.1"
-  },
-  "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx}": [
-      "eslint --fix",
-      "prettier --write"
-    ],
-    "src/**/*.{json,css,scss,md}": [
-      "prettier --write"
-    ]
-  },
-  "engines": {
-    "node": ">=16.0.0",
-    "npm": ">=8.0.0"
+    "native-run": "^1.7.3",
+    "rimraf": "^5.0.5"
   }
 }
