chore: update appflow config with correct root path

--- a/cbse-prepmaster/appflow.config.json
+++ b/cbse-prepmaster/appflow.config.json
@@ -2,7 +2,7 @@
   "apps": [
     {
       "appId": "cbse-prepmaster",
-      "root": ".",
+      "root": "client",
       "dependencyInstallCommand": "npm install --legacy-peer-deps",
       "webBuildCommand": "npm run build",
       "androidBuildConfig": {
